tests/baselines/reference/decoratorOnClassProperty11(strict=true).errors.txt
decoratorOnClassProperty11.ts(4,5): error TS1329: 'dec' accepts too few arguments to be used as a decorator here. Did you mean to call it first and write '@dec()'?
decoratorOnClassProperty11.ts(4,10): error TS7008: Member 'prop' implicitly has an 'any' type.


==== decoratorOnClassProperty11.ts (2 errors) ====
    declare function dec(): <T>(target: any, propertyKey: string) => void;
    
    class C {
        @dec prop;
        ~~~~
!!! error TS1329: 'dec' accepts too few arguments to be used as a decorator here. Did you mean to call it first and write '@dec()'?
             ~~~~
!!! error TS7008: Member 'prop' implicitly has an 'any' type.
    }